--- a/package.json
+++ b/package.json
@@ -1,53 +1,51 @@
 {
-  "name": "template-ts-package",
-  "version": "1.0.0",
-  "description": "TS template",
-  "main": "./dist/main.ts",
-  "browser": "./dist/main.browser.js",
-  "types": "./dist/types/main.d.ts",
+  "name": "simfile-parser",
+  "version": "0.0.1",
+  "description": "Read stepmania charts with javascript!",
+  "main": "./dist/main.js",
+  "browser": "./dist/browser.js",
+  "types": "./dist/main.d.ts",
   "bin": "./dist/cli.js",
+  "type": "module",
+  "sideEffects": "false",
   "scripts": {
     "test": "jest",
     "lint": "eslint --max-warnings 0 . --ext .ts",
     "build": "tsc -p tsconfig.json",
     "clean": "rm -rf dist build",
-    "ts-node": "ts-node",
-    "build-all": "npm run clean && npm run build && npm run esbuild-node && npm run esbuild-browser",
-    "esbuild-browser": "esbuild src/browser.ts --bundle --minify --sourcemap=external --outfile=dist/main.browser.js",
-    "esbuild-browser:dev": "esbuild src/browser.ts --bundle --outfile=dist/main.browser.js",
-    "esbuild-browser:watch": "esbuild src/browser.ts --bundle --watch --outfile=dist/main.browser.js",
-    "esbuild-node": "esbuild src/cli.ts --bundle --platform=node --minify --sourcemap=external --outfile=dist/cli.js",
-    "esbuild-node:dev": "esbuild src/cli.ts --bundle --sourcemap=external --outfile=dist/cli.js",
-    "esbuild-node:watch": "esbuild src/cli.ts --bundle --watch --sourcemap=external --outfile=dist/cli.js"
+    "clean-build": "npm run clean && npm run build"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/raulanatol/template-ts-package.git"
+    "url": "git+https://github.com/noahm/simfile-parser.git"
   },
   "keywords": [],
   "author": {
-    "name": "raulanatol",
-    "email": "raul@natol.es"
+    "name": "Noah Manneschmidt",
+    "email": "noah@manneschmidt.net"
   },
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
-    "url": "https://github.com/raulanatol/template-ts-package/issues"
+    "url": "https://github.com/noahm/simfile-parser/issues"
   },
   "jest": {
     "preset": "ts-jest"
   },
-  "homepage": "https://github.com/raulanatol/template-ts-package#readme",
+  "engines": {
+    "node": "^12.20.0 || ^14.13.1 || >=16.0.0"
+  },
+  "homepage": "https://github.com/noahm/simfile-parser#readme",
   "devDependencies": {
-    "@cowcoders/eslint-config": "1.2.9",
-    "@types/jest": "26.0.23",
-    "@types/node": "15.6.1",
-    "@typescript-eslint/eslint-plugin": "4.25.0",
-    "@typescript-eslint/parser": "4.25.0",
-    "esbuild": "0.12.5",
-    "eslint": "7.27.0",
-    "jest": "27.0.3",
-    "ts-jest": "27.0.1",
-    "ts-node": "10.0.0",
-    "typescript": "4.3.2"
+    "@cowcoders/eslint-config": "^1.5.0",
+    "@types/jest": "^27.4.0",
+    "@types/node": "^16.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.13.0",
+    "@typescript-eslint/parser": "^5.13.0",
+    "confusing-browser-globals": "^1.0.11",
+    "eslint": "^8.10.0",
+    "eslint-plugin-jest": "^26.1.1",
+    "jest": "^27.0.3",
+    "ts-jest": "^27.0.1",
+    "typescript": "^4.6.0"
   }
 }
