--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,16 +4,20 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node: [12, 14, 16, 18]
+    name: Build with node ${{ matrix.node }}
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v2
+      - uses: actions/setup-node@v3
         with:
           always-auth: true
-          node-version: 16
+          node-version: ${{ matrix.node }}
           registry-url: "https://npm.pkg.github.com"
           scope: "@noahm"
+          cache: "yarn"
 
       - name: Init project
         run: yarn
