--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "simfile-parser",
-  "version": "0.2.1",
+  "version": "0.3.0",
   "description": "Read stepmania charts with javascript!",
   "main": "./dist/main.js",
   "browser": "./dist/browser.js",
@@ -36,7 +36,7 @@
     "preset": "ts-jest"
   },
   "engines": {
-    "node": "^12.20.0 || ^14.13.1 || >=16.0.0"
+    "node": "^14.13.1 || >=16.0.0"
   },
   "homepage": "https://github.com/noahm/simfile-parser#readme",
   "devDependencies": {
@@ -48,7 +48,7 @@
     "eslint": "^8.10.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-jest": "^26.1.1",
-    "eslint-plugin-jsdoc": "^37.9.7",
+    "eslint-plugin-jsdoc": "^39.0.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.0.3",
     "prettier": "^2.5.1",
