--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,49 +1,47 @@
-name: Release
+name: Publish to NPM
 
-# on:
-#   push:
-#     branches:
-#       - master
+on:
+  release:
+    types: [created]
 
-# TODO:
-# Crib more from https://github.com/Alexandrshy/como-north and enable this
+# NB: make publish fully automatic by following in the footsteps of https://github.com/Alexandrshy/como-north
+# and/or straight to semantic-release cli (from npm)
 
 jobs:
-  Release:
-    name: release
+  checks:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
           always-auth: true
           node-version: 16
           registry-url: "https://npm.pkg.github.com"
           scope: "@noahm"
-
+          cache: "yarn"
       - name: Install dependencies
-        run: yarn
+        run: yarn --frozen-lockfile
+      - name: eslint
+        run: yarn lint
+      - name: tests
+        run: yarn test
 
+  publish:
+    needs: build
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          always-auth: true
+          node-version: 16
+          registry-url: "https://npm.pkg.github.com"
+          scope: "@noahm"
+          cache: "yarn"
+      - name: Install dependencies
+        run: yarn --frozen-lockfile
       - name: Build
         run: yarn build
-
-      - name: Semantic Release
-        uses: cycjimmy/semantic-release-action@v2
-        id: semantic
-        with:
-          branch: master
-          extra_plugins: |
-            @semantic-release/git
-            @semantic-release/changelog
+      - name: Publish to NPM
+        run: npm publish
         env:
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-
-      - name: Push updates to branch for major version
-        if: steps.semantic.outputs.new_release_published == 'true'
-        run: git push https://x-access-token:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git HEAD:refs/heads/v${{steps.semantic.outputs.new_release_major_version}}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+          NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
