--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,10 +33,8 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          always-auth: true
           node-version: 16
-          registry-url: "https://npm.pkg.github.com"
-          scope: "@noahm"
+          registry-url: "https://registry.npmjs.org"
           cache: "yarn"
       - name: Install dependencies
         run: yarn --frozen-lockfile
