--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-jest": "^27.1.4",
     "eslint-plugin-jsdoc": "^46.2.6",
-    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-prettier": "^5.0.0-alpha.2",
     "jest": "^27.0.3",
     "prettier": "^3.0.0",
     "ts-jest": "^27.0.1",
