--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "sideEffects": "false",
   "scripts": {
     "test": "jest",
+    "format": "prettier --write src/**/*.ts",
     "lint": "eslint --max-warnings 0 ./src",
     "build": "tsc -p tsconfig.json",
     "clean": "rm -rf dist build",
