--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -14,3 +14,6 @@ updates:
         dependency-type: "production"
       development-dependencies:
         dependency-type: "development"
+        exclude-patterns:
+          - "prettier"
+          - "eslint-plugin-prettier"
