First steps at in-browser parsing support

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,7 +20,7 @@ jobs:
           cache: "yarn"
 
       - name: Init project
-        run: yarn --frozen-lockfile
+        run: yarn --immutable
 
       - name: Webpack Build
         run: yarn build
