--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,8 @@
     "allowSyntheticDefaultImports": true,
     "sourceMap": true,
     "outDir": "./dist/",
-    "types": ["node", "jest"],
-    "lib": ["ES2020"]
+    "types": ["node", "jest", "wicg-file-system-access"],
+    "lib": ["ES2020", "DOM"]
   },
   "include": ["src/**/*.ts"],
   "exclude": ["node_modules", "**/*.test.ts"]
