--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "sideEffects": "false",
   "scripts": {
     "test": "jest",
+    "format": "prettier --write src/**/*.ts",
     "lint": "eslint --max-warnings 0 ./src",
     "build": "tsc -p tsconfig.json",
     "clean": "rm -rf dist build",
@@ -66,12 +67,12 @@
     "@typescript-eslint/parser": "^6.6.0",
     "confusing-browser-globals": "^1.0.11",
     "eslint": "^8.49.0",
-    "eslint-config-prettier": "^9.0.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-jest": "^27.2.3",
     "eslint-plugin-jsdoc": "^46.4.4",
-    "eslint-plugin-prettier": "^4.2.1",
-    "jest": "^29.6.1",
-    "prettier": "^2.8.8",
+    "eslint-plugin-prettier": "^5.0.1",
+    "jest": "next",
+    "prettier": "^3.1.1",
     "ts-jest": "^29.1.1",
     "typescript": "^5.2.2"
   },
