--- a/package.json
+++ b/package.json
@@ -60,21 +60,20 @@
   },
   "homepage": "https://github.com/noahm/simfile-parser#readme",
   "devDependencies": {
-    "@types/jest": "^29.5.3",
+    "@types/jest": "^30.0.0",
     "@types/node": "^22.7.4",
     "@types/wicg-file-system-access": "^2023.10.1",
-    "@typescript-eslint/eslint-plugin": "^8.8.0",
-    "@typescript-eslint/parser": "^8.8.0",
     "confusing-browser-globals": "^1.0.11",
-    "eslint": "^8.49.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-jest": "^28.2.0",
-    "eslint-plugin-jsdoc": "^50.3.0",
-    "eslint-plugin-prettier": "^5.0.1",
-    "jest": "next",
-    "prettier": "^3.1.1",
-    "ts-jest": "^29.1.1",
-    "typescript": "^5.2.2"
+    "eslint": "^9.39.0",
+    "eslint-config-prettier": "^10.1.0",
+    "eslint-plugin-jest": "^29.2.0",
+    "eslint-plugin-jsdoc": "^61.5.0",
+    "eslint-plugin-prettier": "^5.5.4",
+    "jest": "^30.0.0",
+    "prettier": "^3.7.1",
+    "ts-jest": "^29.4.1",
+    "typescript": "^5.9.2",
+    "typescript-eslint": "^8.49.0"
   },
   "resolutions": {
     "semver": "^7.5.2"
